# fpl

./: .gitignore  .pre-commit-config.yaml  hello.py  makefile  pyproject.toml  ruff.toml
docs/: fpl-endpoints.csv
notebooks/: clean_fixtures.ipynb  fpl_eda.py
src/: acquire_data.py
src/fpl/: acquire_fixtures.py  acquire_team_info.py
