[project]
name = "fpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.10.15",
    "polars>=1.22.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "ruff>=0.9.5",
    "types-requests>=2.32.4.20250611",
]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
warn_unused_configs = true
show_error_codes = true
pretty = true
cache_dir = ".mypy_cache"

